<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LSTracker</string>
    <string name="action_admin">Admin</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="sync_notification_text">Syncing with server ...</string>   
    <string name="sync_notification_complete_text">Syncing with server complete.</string>    
    <string name="network_unavailable">No network available on the device.</string> 
    <string name="api_unavailable">Remote api is not responsive.</string>   
    <string name="unacceptable_version_code">You must upgrade your application before continuing.</string>   
    <string name="new_participant_prefix">New&#160;</string> 
    <string name="save">Save</string> 
    <string name="new_survey">New Survey</string> 
    <string name="choose_instrument">Choose Instrument</string>
    <string name="required_field">This field is required.</string>
    <string name="password_title">Enter password</string>
    <string name="password_message">This action requires a password.  Please enter the password below.</string>
    <string name="incorrect_password">This password is incorrect.</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_search">Search</string>
    <string name="sync_interval">Sync Interval (minutes)</string>
    <string name="save_button">Save</string>
    <string name="device_identifier">Device Identifier</string>
    <string name="sync_settings">Sync Settings</string>
    <string name="api_endpoint">Api Endpoint Url</string>
    <string name="api_version">Api Version</string>
    <string name="api_key">Api Key: </string>  
    <string name="last_update">Last update:  </string>
    <string name="system_information">App Information</string>
    <string name="version_code">Version Code: </string>
    <string name="version_name">Version Name: </string>
    <string name="participants_loading_header">Loading Participants</string>
    <string name="participants_loading_message">Please wait a moment</string>
    <string name="login_button">Login</string>
    <string name="login_label_message">Please login in order to sync participants</string>
    <string name="email_password_mismatch">Invalid email and password combination!</string>
    <string name="invalid_email_or_password">Invalid email or password!</string>
    <string name="edit">Edit</string>
    <string name="encryption_required_title">Encryption required</string> 
    <string name="encryption_required_text">This application requires that the device be encrypted.  Please encrypt your device to continue.</string>
    <string name="new_apk_title">Newer version available</string>
    <string name="new_apk_message">Would you like to update the application to the newer version?</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="device_label">Device Label</string>
    <string name="invalid_validator">This is invalid</string>
    <string name="invalid_validator_toast">is invalid!</string>
    <string name="ensure_survey_open">Please ensure the Survey application is open!</string>
    <string name="neighbor">Neighbor</string>
    <string name="child">Child</string>
    <string name="caregiver">Caregiver</string>
    <string name="center">Center</string>
    <string name="years">years</string>
    <string name="months">months</string>
    <string name="days">days</string>
    <string name="age">Age Today</string>
    <string name="or">OR</string>
    <string name="project_id">Project Id</string>
    <string name="up_to_date">Your application is up to date</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="re_check_for_updates">Recheck for updates after granting storage permission</string>
    <string name="reset_last_sync_time">Reset Last Sync Time</string>
    <string name="last_sync_time">Last Sync Time: </string>
    <string name="device_settings">Device Settings</string>
    <string name="api_endpoint_settings">Api Endpoint Settings</string>
    <string name="admin_settings">Admin Settings</string>
</resources>
