<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="always"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/menu_item_refresh"
        android:icon="@drawable/ic_menu_item_refresh"
        android:showAsAction="always"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/menu_item_settings"
        android:icon="@drawable/ic_settings"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/menu_action_admin"
        android:icon="@drawable/ic_menu_item_secure"
        android:showAsAction="ifRoom"
        android:title="@string/action_admin"/>
</menu>
