<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/survey_fragment_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linear_layout_for_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/api_endpoint_settings_label"
            style="@style/sectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api_endpoint_settings"/>

        <TextView
            android:id="@+id/api_endpoint_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/api_endpoint"/>

        <EditText
            android:id="@+id/api_endpoint_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"/>

        <TextView
            android:id="@+id/api_version_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/api_version"/>

        <EditText
            android:id="@+id/api_version_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>

        <TextView
            android:id="@+id/project_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/project_id"/>

        <EditText
            android:id="@+id/project_id_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

        <TextView
            android:id="@+id/api_key_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/api_key"/>

        <EditText
            android:id="@+id/api_key_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>

        <TextView
            android:id="@+id/device_settings_label"
            style="@style/sectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/device_settings"/>

        <TextView
            android:id="@+id/device_identifier_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_identifier"/>

        <EditText
            android:id="@+id/device_identifier_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine">

            <requestFocus/>
        </EditText>

        <TextView
            android:id="@+id/device_label_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_label"/>

        <EditText
            android:id="@+id/device_label_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine">
        </EditText>

        <TextView
            android:id="@+id/sync_settings_label"
            style="@style/sectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sync_settings"/>

        <TextView
            android:id="@+id/last_update_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/reset_last_sync_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/login_background"
            android:padding="10dp"
            android:text="@string/reset_last_sync_time"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/system_info_label"
            style="@style/sectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/system_information"/>

        <TextView
            android:id="@+id/version_code_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/version_code"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/version_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/updates_check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/login_background"
            android:padding="10dp"
            android:text="@string/check_for_updates"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>
